[project]
name = "3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.14"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "langchain>=1.2.13",
    "langchain-ollama>=1.0.1",
    "markdown>=3.10.2",
    "nbformat>=5.10.4",
    "ollama>=0.6.1",
    "pygments>=2.19.2",
    "reportlab>=4.4.10",
]
